// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/LookupInfo/ViolationInfo NewViolationsSincePreviousLookup smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="no-padding list-group-item">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box">
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="keys lookup-info">
                        <div>
                          Violations:
                        </div>
                        <div>
                          (
                          <a class="show-violations-aspect-details"
                             href="#"
                             target="_blank"
                          >
                            show details
                          </a>
                          )
                        </div>
                      </div>
                      <div class="values lookup-info">
                        <div class="violation-total">
                          (1 new) 3
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/LookupInfo/ViolationInfo NoViolations smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="no-padding list-group-item">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box">
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="keys lookup-info">
                        <div>
                          Violations:
                        </div>
                      </div>
                      <div class="values lookup-info">
                        <div class="violation-total">
                          0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/LookupInfo/ViolationInfo Violations smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="no-padding list-group-item">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box">
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="keys lookup-info">
                        <div>
                          Violations:
                        </div>
                        <div>
                          (
                          <a class="show-violations-aspect-details"
                             href="#"
                             target="_blank"
                          >
                            show details
                          </a>
                          )
                        </div>
                      </div>
                      <div class="values lookup-info">
                        <div class="violation-total">
                          3
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
